# Chaghri

./: CMakeLists.txt  README.md  Test_CHAGHRI.cpp  chaghri.cpp  chaghri.h  simpleCHAGHRI.cpp
